--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,1 +1,15 @@
-h1{color:red;-webkit-transition:color 1s ease;transition:color 1s ease}h1:hover{-webkit-transition:color 1s ease;transition:color 1s ease}a{-webkit-transition:color 1s ease;transition:color 1s ease}
+h1 {
+  color: red;
+  -webkit-transition: color 1s ease;
+  transition: color 1s ease;
+}
+
+h1:hover {
+  -webkit-transition: color 1s ease;
+  transition: color 1s ease;
+}
+
+a {
+  -webkit-transition: color 1s ease;
+  transition: color 1s ease;
+}
