--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,18 +1,34 @@
+html, body {
+    font-family: 'Avenir', sans-serif;
+    background-color: #eef4d4;
+}
+
+.wrap {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+h1,h2,h3 {
+    text-align: center;
+}
 
 h1 {
-    color: red;
-    transition: color 1s ease;
+    font-size: 48px;
+    font-weight: 500;
 }
 
-h1:hover {
-    transition: color 1s ease;
-}
-
-a {
-    transition: color 1s ease; 
-}
-
-
-.erdem {
-    color: red;
+.logos {
+    text-align: center;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    img {
+        width: auto;
+        height: 160px;
+        margin-left: 32px;
+        margin-right: 32px;
+    }
 }
