--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -3,7 +3,7 @@ extends layouts/default
 block content
 
     .wrap
-        h1 Frontend Boilerplate with sass, pug, browserify and moreasasfasfasfsfasfs erdem
+        h1 Frontend Boilerplate with sass, pug, browserify and more
         .logos
             img(src="img/gulp-logo.svg")
             img(src="img/browserify-logo.png")
