--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -1,11 +1,17 @@
 doctype html
-html
+html(lang="en")
     head
         title Frontend Boilerplate
         meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", type="text/css", href="css/app.css")
-        script(type="text/javascript", src="js/app.js")
 
     body
+
+        include ../partials/header
+
         block content
+
+        include ../partials/footer
+        block bottom
+        script(type="text/javascript", src="js/bundle.js")
