add manifest file

--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -4,6 +4,8 @@ html(lang="en")
         title Frontend Boilerplate
         meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1")
+        meta(name="keywords", content="a usefull boilerplate for your projects")
+        link(rel="manifest", href="/manifest.webmanifest")
         link(rel="stylesheet", type="text/css", href="css/app.css")
 
     body
