fix css file name

--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -7,7 +7,7 @@ html(lang="en")
         meta(name="keywords", content="a usefull boilerplate for your projects")
         link(rel='shortcut icon', type='image/x-icon', href='/favicon.ico')
         link(rel="manifest", href="/manifest.webmanifest")
-        link(rel="stylesheet", type="text/css", href="css/app.css")
+        link(rel="stylesheet", type="text/css", href="css/style.css")
 
     body
 
