--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,9 +1,11 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-html, body {
-    font-family: sans-serif;
-    background-color: #eef4d4;
+html,
+body {
+  font-family: sans-serif;
+  background-color: #eef4d4;
+  font-size: 16px;
 }
