--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -1,25 +1,25 @@
 doctype html
 html(lang="en")
-    head
-        title Frontend Boilerplate
-        meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1")
-        meta(name="keywords", content="a usefull boilerplate for your projects")
-        link(rel='shortcut icon', type='image/x-icon', href='/favicon.ico')
-        link(rel="manifest", href="/manifest.webmanifest")
-        link(rel="stylesheet", type="text/css", href="css/style.css")
+  head
+    title Frontend Boilerplate
+    meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(name="keywords", content="a usefull boilerplate for your projects")
+    link(rel='shortcut icon', type='image/x-icon', href='/favicon.ico')
+    link(rel="manifest", href="/manifest.webmanifest")
+    link(rel="stylesheet", type="text/css", href="style/bundle.css")
 
-    - var breadcrumb = '';
-    - var bodyClasses = [];
-    - var pageId;
-    block classBlock
+  - var breadcrumb = '';
+  - var bodyClasses = [];
+  - var pageId;
+  block classBlock
 
-    body(class=bodyClasses, id=pageId)
+  body(class=bodyClasses, id=pageId)
 
-        include ../partials/header
+    include ../partials/header
 
-        block content
+    block content
 
-        include ../partials/footer
-        block bottom
-        script(type="text/javascript", src="js/bundle.js")
+    include ../partials/footer
+    block bottom
+    script(type="text/javascript", src="/script/bundle-min.js")
